@@ -1,0 +1,6 @@
+[buildout]
+extends =
+    http://dist.plone.org/release/4.2-latest/versions.cfg
+    https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
+
+package-name = ftw.dashboard.portlets.favourites
