@@ -5,7 +5,8 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Full refactored. Favourites full configurable over the portlet.
+  [eschmutz]
 
 
 2.0.1 (2012-03-05)
